<resources>

    <!-- IOT (번역 불필요)-->

    <string name="app_name">BUDDY CLON</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="scan_signal">%1$d db</string>
    <string name="scan_unknown">Unknown</string>
    <string name="scan_codeless">CodeLess</string>
    <string name="scan_dsps">DSPS</string>
    <string name="scan_suota">SUOTA</string>
    <string name="scan_iot">IoT</string>
    <string name="scan_wearable">Wearable</string>
    <string name="scan_mesh">Mesh</string>
    <string name="scan_proximity">Proximity</string>
    <string name="scan_beacon">iBeacon: %1$s %2$04x-%3$04x</string>
    <string name="scan_microsoft">Microsoft</string>
    <string name="not_available">N/A</string>

    <string name="ble_name">Alice</string>


    <!-- actionbar menu-->
    <string name="Home_menu">Home</string>
    <string name="Search_menu">Search</string>
    <string name="Setting_menu">App setting</string>
    <string name="FAQ_menu">FAQ</string>

    <!-- ble -->
    <string name="connecting_dialog_message">Connecting...</string>
    <string name="research_ble_device">Scan Device</string>
    <string name="disconnect">Device disconnect ?</string>
    <string name="disconnect_noti">Device disconnected</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="searching_device">Searching Device</string>

    <!-- ble device options -->
    <string name="volume_title">Sound Volume</string>
    <string name="distance_title">Distance units</string>
    <string name="meter_title">altitude application</string>
    <string name="Hole_announce_title">Golf Cup Guidance</string>
    <string name="sound_title">Voice recognition</string>


    <string name="meter_text">Meter</string>
    <string name="yard_text">Yard</string>

    <string name="on_text">On</string>
    <string name="off_text">Off</string>

    <string name="two_text">L/R</string>
    <string name="left_text">L</string>
    <string name="right_text">R</string>

    <string name="sound_on_text">On</string>
    <string name="sound_off_text">Off</string>

    <!-- 페이지 문구 -->
    <string name="title_golf_course">Golf Course Info</string>
    <string name="title_device_settting">Device Setting</string>
    <string name="title_search">Search</string>

    <string name="scan_title">Please select a device to connect</string>

    <string name="title_fw_ver">FW version</string>
    <string name="title_map_ver">Golf Map version</string>
    <string name="title_mac_address">MAC Address</string>
    <string name="title_lan">Language</string>
    <string name="title_init">Reset All Setting</string>

    <string name="language_kr_text">한국어</string>
    <string name="language_jp_text">日本語</string>
    <string name="language_en_text">English</string>

    <string name="ver_latest_text">Latest version</string>

    <string name="text_golfinfo_value">Hole : %s\nVersion : %s</string>

    <!-- 팝업 -->
    <string name="dialog_map_update_title">Update</string>
    <string name="dialog_languge_title">Language</string>
    <string name="dialog_btn_ok">Ok</string>
    <string name="dialog_btn_cancel">Cancel</string>

    <string name="dialog_connect_error_title">Error Device Connecting</string>

    <string name="dialog_map_update_fail">Update Fail</string>
    <string name="dialog_map_update_success">Update Succeeded</string>

    <string name="dialog_init_title">Reset Succeeded</string>

    <string name="dialog_net_error_title">Please check the network connection</string>

    <string name="dialog_noti_title">Would you like to check the new notifications?</string>

    <string name="dialog_battery_noti_title">Update can not be done due to low battery.</string>

    <string name="dialog_permission_rationale_title">Allow "BUDDY CLON" to use your location to search the blutetooth devices.</string>​

    <!-- 버튼 -->
    <string name="btn_message_mapupdate">Map Update</string>
    <string name="btn_disconnect">Disconnect</string>

    <!-- 토스트 -->
    <string name="app_finish_message">Press the back button one more time to exit.</string>
</resources>
