<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layout3">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:background="@drawable/dialog_bg"
            android:layout_gravity="center"
    >

        <!--<ProgressBar-->
        <!--android:id="@+id/device_connect_progress"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_margin="16dp"-->
        <!--android:layout_gravity="center_vertical" app:layout_constraintStart_toStartOf="parent"-->
        <!--android:layout_marginStart="200dp" android:layout_marginEnd="200dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>-->


        <TextView
                android:id="@+id/dialog_title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="27dp"
                android:layout_centerVertical="true"
                android:text="@string/dialog_languge_title"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Dialog_Title_style"
                android:layout_marginTop="@dimen/default_dialog_padding"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.0"
                android:layout_marginBottom="32dp"/>


        <RadioGroup
                android:id="@+id/radioGroupLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/default_dialog_padding" app:layout_constraintTop_toBottomOf="@+id/dialog_title_txt"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.13">

            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:text="@string/language_kr_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/lan_radio_01"
                    android:layout_marginRight="8dp"
                    app:layout_constraintStart_toEndOf="@+id/seekBar_volum"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.327"
                    style="@style/List_Title_style"
                    android:paddingLeft="20dp"
            />

            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:text="@string/language_jp_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/lan_radio_02"
                    android:layout_marginRight="8dp"
                    app:layout_constraintStart_toEndOf="@+id/seekBar_volum"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.327"
                    style="@style/List_Title_style"
                    android:paddingLeft="20dp"
            />

            <com.google.android.material.radiobutton.MaterialRadioButton
                    android:text="@string/language_en_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/lan_radio_03"
                    android:layout_marginRight="8dp"
                    app:layout_constraintStart_toEndOf="@+id/seekBar_volum"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.327"
                    android:paddingLeft="20dp"
                    style="@style/List_Title_disabled_style"
                    android:alpha="0.38"
                    android:enabled="false"
            />


        </RadioGroup>
        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:text="@string/dialog_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                app:cornerRadius="23dp"
                style="?attr/materialButtonOutlinedStyle"
                app:strokeColor="@color/color_borders_bg"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size"
                android:singleLine="true"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/btn_ok"
                android:layout_marginBottom="@dimen/default_dialog_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAllCaps="false"
                android:layout_marginStart="16dp" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupLanguage"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok"
                android:text="@string/dialog_btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                app:cornerRadius="23dp"
                android:textSize="@dimen/default_text_size"
                app:backgroundTint="@color/colorAccent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                android:textAllCaps="false"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_cancel" android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>