<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:viewBindingIgnore="true"
        tools:context=".fragment.AppSetFragment"
        android:paddingRight="38dp"
        android:paddingLeft="38dp"
        android:paddingTop="10dp"
        >


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraints01"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            app:layout_constraintTop_toTopOf="parent" tools:layout_editor_absoluteX="38dp">

        <TextView
                android:id="@+id/fw_text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_fw_ver"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/List_Title_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/fw_text02"/>

        <TextView
                android:id="@+id/fw_text02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fw_text01"
                style="@style/List_SubTitle_style"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/fw_text01"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
            android:id="@+id/divider01"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/constraints01"/>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraints02"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@id/divider01"
            tools:layout_editor_absoluteX="38dp">

        <TextView
                android:id="@+id/map_text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_map_ver"
                style="@style/List_Title_style"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/map_text02"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:id="@+id/map_text02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/map_text01"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/List_SubTitle_style"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@+id/map_text01"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
            android:id="@+id/divider02"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@id/constraints02"/>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraints03"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            tools:layout_editor_absoluteX="0dp" app:layout_constraintTop_toBottomOf="@+id/divider02">

        <TextView
                android:id="@+id/mac_text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_mac_address"
                style="@style/List_Title_style"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/mac_text02"/>
        <TextView
                android:id="@+id/mac_text02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/mac_text01"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/List_SubTitle_style"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/mac_text01"
                app:layout_constraintHorizontal_bias="0.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
            android:id="@+id/divider03"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/constraints03"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraints04"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            tools:layout_editor_absoluteX="0dp" app:layout_constraintTop_toBottomOf="@+id/divider03">

        <TextView
                android:id="@+id/lan_text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_lan"
                style="@style/List_Title_style"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/lan_text02"/>
        <TextView
                android:id="@+id/lan_text02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lan_text01"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/List_SubTitle_style"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/lan_text01" app:layout_constraintHorizontal_bias="0.0"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
            android:id="@+id/divider04"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/constraints04"/>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraints05"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            tools:layout_editor_absoluteX="0dp" app:layout_constraintTop_toBottomOf="@+id/divider04">

        <TextView
                android:id="@+id/init_text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_init"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/List_Title_style"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
            android:id="@+id/divider05"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/constraints05"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>